--- a/TriageRequestor/Info.plist
+++ b/TriageRequestor/Info.plist
@@ -5,6 +5,7 @@
 	<key>UIAppFonts</key>
 	<array>
 		<string>IndieFlower-Regular.ttf</string>
+		<string>GloriaHallelujah-Regular.ttf</string>
 	</array>
 	<key>UIApplicationExitsOnSuspend</key>
 	<true/>
